@@ -1,9 +1,11 @@
-FROM gradle:4.7.0-jdk8-alpine AS build
+# Stage 1: Build
+FROM gradle:jdk21-alpine AS build
 COPY --chown=gradle:gradle . /home/gradle/src
 WORKDIR /home/gradle/src
-RUN gradle build --no-daemon 
+RUN gradle build --no-daemon
 
-FROM openjdk:8-jre-slim
+# Stage 2: Run
+FROM openjdk:21-slim
 
 EXPOSE 8080
 
@@ -11,5 +13,5 @@ RUN mkdir /app
 
 COPY --from=build /home/gradle/src/build/libs/*.jar /app/spring-boot-application.jar
 
-ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/spring-boot-application.jar"]
-
+# Удаление устаревшей опции и добавление новых для работы с памятью в контейнерах
+ENTRYPOINT ["java", "-XX:MaxRAMPercentage=75.0", "-XX:InitialRAMPercentage=50.0", "-Djava.security.egd=file:/dev/./urandom", "-jar", "/app/spring-boot-application.jar"]
